添加商品详细详细查询功能

--- a/goodsDetails.html
+++ b/goodsDetails.html
@@ -26,45 +26,45 @@
 							</li>
 							<li>
 								<div class="tb-pic tb-s40">
-									<a href="#"><img src="img/example.jpg" mid="img/example.jpg" big="img/example.jpg"></a>
+									<a href="#"><img src="img/example.jpg" mid="img/example.jpg" big="img/example.jpg" id="pic1"></a>
 								</div>
 							</li>
 							<li>
 								<div class="tb-pic tb-s40">
-									<a href="#"><img src="img/eagle.jpg" mid="img/eagle.jpg" big="img/eagle.jpg"></a>
+									<a href="#"><img src="img/eagle.jpg" mid="img/eagle.jpg" big="img/eagle.jpg" id="pic2"></a>
 								</div>
 							</li>
 							<li>
 								<div class="tb-pic tb-s40">
-									<a href="#"><img src="img/banner.jpg" mid="img/banner.jpg" big="img/banner.jpg"></a>
+									<a href="#"><img src="img/banner.jpg" mid="img/banner.jpg" big="img/banner.jpg" id="pic3"></a>
 								</div>
 							</li>
 							<li>
 								<div class="tb-pic tb-s40">
-									<a href="#"><img src="img/serch.jpg" mid="img/serch.jpg" big="img/serch.jpg"></a>
+									<a href="#"><img src="img/serch.jpg" mid="img/serch.jpg" big="img/serch.jpg" id="pic4"></a>
 								</div>
 							</li>
 						</ul>
 					</div>
 					<div class="goods_info">
 						<div class="ershou-hd">
-							<h2 class="ershou-title">九五新iPad mini2</h2>
+							<h2 class="ershou-title" id="detail_name"></h2>
 							<div class="ershou-price discount">
-								<span>1100</span>
+								<span id="detail_price"></span>
 								<span class="is-discount">可小刀</span>
 							</div>
 							<p class="bro-counts">浏览了<span>36</span>次</p>
 							<a class="zan" href="#">赞(<span>0</span>)</a>
 						</div>
-						<ul class="ershou-detail">							
+						<ul class="ershou-detail">
 							<li class="ershou-phone">
 								<div class="name"><span>联系方式</span></div>
-								<div class="value"><span>华科</span></div>
+								<div class="value"><span id="detail_place"></span></div>
 								<!--<div class="hide">点击查看详情</div>-->
 							</li>
 							<li class="ershou-description">
 								<div class="name"><span>详情描述</span></div>
-								<div class="value"><textarea class="input">的飞飞发送到飞jshfjhdsk辅导费飞发的地方国防生的人工同花顺fdhhgjdfbsfkghruregh地方飞发的飞发的的地方发的地方发的飞发的 飞发的 就或多或少家分店北京饭店富家大室福建省当时是机顶盒分交电话费和交电话费换届大会房间回复</textarea></div>
+								<div class="value"><textarea class="input" id="detail_description"></textarea></div>
 							</li>
 						</ul>
 					</div>
