设置图片提交地址

--- a/myRelease.html
+++ b/myRelease.html
@@ -18,11 +18,11 @@
 							<p>给宝贝来张照片呗</p>
 							<div class="line"></div>
 							<div class="uploadBox">
-								<form class="photo_select" id="picdiv" name="picdiv" method="post" action="#" enctype="multipart/form-data">
+								<div class="photo_select" id="picdiv" name="picdiv" >
 									<!-- 图片上传按钮 -->
 									<input id="filepic" type="file" name="filepic"/>
 									<img src="img/kuang.png" />
-								</form>
+								</div>
 								<!-- 图片展示模块 -->
 								<div class="files">
 								</div>
