--- a/myRelease.html
+++ b/myRelease.html
@@ -29,7 +29,7 @@
 								<div class="up_progress">
 									<div class="progress-bar"></div>
 								</div>
-								<button type="submit" style="position: relative;right: 90px;top: 150px">提交</button>
+								<button id="subpic" style="position: relative;right: 90px;top: 150px">提交</button>
 							</div>
 						</div>
 						<div class="second area">
@@ -69,7 +69,7 @@
 							<input type="text" id="mr_tel" class="input"/>
 							</div>
 						</div>
-						<button class="releaseBtn" id="mr_release" type="submit" style="margin-left: 260px;">发布消息</button>
+						<button class="releaseBtn" id="mr_release" style="margin-left: 260px;">发布消息</button>
 				</div>
 		<script type="text/javascript" src="js/myRelease.js"></script>
 	</body>
