--- a/recourse/common/head.html
+++ b/recourse/common/head.html
@@ -35,7 +35,11 @@
 			</div>
 			<!--搜素框-->
 			<div class="topsearch">
-				<label class="searchicon"><img src="../../img/searchicon.png" /></label>
+				<label class="searchicon" >
+					<a id="searchbtn" onclick="onclick1(this);" href="../../index.html" target="mainframe" class="index-text">
+						<img src="../../img/searchicon.png" />
+					</a>
+				</label>
 				<input type="text" id="search" class="search" />
 			</div>
 		</div>
