提交最后更新

--- a/goodsDetails.html
+++ b/goodsDetails.html
@@ -12,36 +12,16 @@
 		<title>商品详情</title>
 	</head>
 		<div class="content">
-			<div style="width: 840px;margin: 0 auto;background-color: #FFFFFF;">
+			<div style="width: 840px;height:100%;margin: 0 auto;background-color: #FFFFFF;">
 				<div class="goods_details">
 					<div class="goods_photo">
 						<div class="tb-booth tb-pic tb-s310">
 							<a href="img/icon_password.jpg"><img src="img/icon_password.jpg" alt="美女" rel="img/icon_password.jpg" class="jqzoom" /></a>
 						</div>
-						<ul class="tb-thumb" id="thumblist">
-							<li class="tb-selected">
-								<div class="tb-pic tb-s40">
-									<a href="#"><img src="img/icon_password.jpg" mid="img/icon_password.jpg" big="img/icon_password.jpg"></a>
-								</div>
-							</li>
+						<ul class="tb-thumb" id="thumblist">	
 							<li>
 								<div class="tb-pic tb-s40">
 									<a href="#"><img src="img/example.jpg" mid="img/example.jpg" big="img/example.jpg" id="pic1"></a>
-								</div>
-							</li>
-							<li>
-								<div class="tb-pic tb-s40">
-									<a href="#"><img src="img/eagle.jpg" mid="img/eagle.jpg" big="img/eagle.jpg" id="pic2"></a>
-								</div>
-							</li>
-							<li>
-								<div class="tb-pic tb-s40">
-									<a href="#"><img src="img/banner.jpg" mid="img/banner.jpg" big="img/banner.jpg" id="pic3"></a>
-								</div>
-							</li>
-							<li>
-								<div class="tb-pic tb-s40">
-									<a href="#"><img src="img/serch.jpg" mid="img/serch.jpg" big="img/serch.jpg" id="pic4"></a>
 								</div>
 							</li>
 						</ul>
@@ -58,13 +38,13 @@
 						</div>
 						<ul class="ershou-detail">
 							<li class="ershou-phone">
-								<div class="name"><span>联系方式</span></div>
+								<div class="name"><span >联系方式</span></div>
 								<div class="value"><span id="detail_place"></span></div>
 								<!--<div class="hide">点击查看详情</div>-->
 							</li>
 							<li class="ershou-description">
 								<div class="name"><span>详情描述</span></div>
-								<div class="value"><textarea class="input" id="detail_description"></textarea></div>
+								<div class="value"><textarea disabled="disabled" class="input" id="detail_description"></textarea></div>
 							</li>
 						</ul>
 					</div>
