--- a/index.html
+++ b/index.html
@@ -4,20 +4,93 @@
 	<head>
 		<meta charset="UTF-8">
 
-		<link href="css/plugincss/animate.css" rel="stylesheet" type="index/css">
-		<link href="css/plugincss/jPages.css" rel="stylesheet" type="index/css">
-		<link href="css/index.css" rel="stylesheet" type="index/css">
-		<link href="css/recourse/common.css" rel="stylesheet" type="index/css">
+	<link href="css/recourse/manu.css" rel="stylesheet" type="text/css">
+		<link href="css/plugincss/jPages.css" rel="stylesheet" type="text/css">
+		<link href="css/plugincss/animate.css" rel="stylesheet" type="text/css">
+		<link href="css/index.css" rel="stylesheet" type="text/css">
 		<script type="text/javascript" src="js/plugins/jquery.js"></script>
 		<script type="text/javascript" src="js/plugins/jPages.min.js"></script>
+				<script type="text/javascript" src="js/photoCarousel.js"></script>
+<!--		<script type="text/javascript" src="js/common.js"></script>-->
 			
 		<title>首页</title>
 	</head>
 
 	<body>
-		
+		<div style="margin: 0 auto;width: 1200px;height: 100%;">
+		<nav class="contentleft">
+				<ul>
+					<li class="option0 opt">
+						<a href="#" id="collegebike"><h3>校园代步</h3></a>
+						<div class="sub_nav" >
+							<span>
+                                <a href="#" target="_self">自行车</a>
+                                <a href="#" target="_self">电动车</a>
+                            </span>
+						</div>
+					</li>
+					<li class="option1 opt">
+						<a href="#" target="_self" id="cloth"><h3>数码</h3></a>
+						<div class="sub_nav">
+							<span>
+                                <a href="#" target="_self">手机</a>
+                                <a href="#" target="_self">衣服</a>
+                            </span>
+						</div>
+					</li>
+					<li class="option2 opt">
+						<a href="#" target="_self"><h3>乐器</h3></a>
+						<div class="sub_nav">
+							<span>
+                                <a href="#" target="_self">吉他</a>
+                                <a href="#" target="_self">电车</a>
+                            </span>
+						</div>
+					</li>
+					<li class="option3 opt">
+						<a href="#" target="_self"><h3>校园代步</h3></a>
+						<div class="sub_nav">
+							<span>
+                                <a href="#" target="_self">锅</a>
+                                <a href="#" target="_self">热水壶</a>
+                            </span>
+						</div>
+					</li>
+					<li class="option4 opt">
+						<a href="#" target="_self"><h3>其他</h3></a>
+						<div class="sub_nav">
+							<span>
+                                <a href="#" target="_self">锅</a>
+                                <a href="#" target="_self">热水壶</a>
+                            </span>
+						</div>
+					</li>
+				</ul>
+			</nav>
+		<div class="slide-1">
+				<ul class="pic_list">
+					<li class="on" value="1">
+						<button class="slide_button sb1"></button>
+					</li>
+					<li value="2">
+						<button class="slide_button sb2"></button>
+					</li>
+					<li value="3">
+						<button class="slide_button sb3"></button>
+					</li>
+				</ul>
+				<div class="background_list">
+					<a href="javascript:void(0)" class="img_slide" style="background: url(img/first.jpg) center center no-repeat;">
+					</a>
+					<a href="javascript:void(0)" class="img_slide" style="background: url(img/second.jpg) center center no-repeat;">
+					</a>
+					<a href="javascript:void(0)" class="img_slide" style="background: url(img/third.jpg) center center no-repeat;">
+					</a>
+				</div>
+			</div>
+			
 		<div class="content">
-			<div style="width: 840px;margin: 0 auto;padding-top: 50px;">
+			<div style="width: 815px;margin: 0 auto;padding-top: 50px;">
 				<div id="item_list">
 					<ul id="list">
 							
