--- a/login.html
+++ b/login.html
@@ -18,9 +18,9 @@
 				<div class="loginBox">
 					<div style="width: 250px;height: 250px;padding: 25px;">
 				    	<div class="boxTitle_id">账号登陆</div>
-				    	<input class="loginName input" type="text" id="usename" name="username" value=""   placeholder="账号"/>
+				    	<input class="loginName input" type="text" id="username" name="username" value=""   placeholder="账号"/>
 				    	<input class="loginPassword input" id="pwd" type="password" name="pw" value=""placeholder="密码"/>
-				    	<button class="login button" id="loginbtn" type="submit">登 录</button>
+				    	<button class="login button" id="loginbtn">登 录</button>
 					</div>
 				</div>
 			</div>
