--- a/myMessage.html
+++ b/myMessage.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<link href="css/myMessage.css" rel="stylesheet" type="index/css">
-		<link href="css/common.css" rel="stylesheet" type="index/css">
+		<link href="css/recourse/common.css" rel="stylesheet" type="index/css">
 		<script type="text/javascript" src="js/plugins/jquery.js"></script>
 		<script type="text/javascript" src="js/plugins/My97DatePicker/WdatePicker.js"></script>
 		<script type="text/javascript" src="js/myMessage.js"></script>
@@ -35,25 +35,25 @@
 							
 								<td>昵称</td>
 								<td>
-									<input name="userName" id="userName" required="required"/>
+									<input name="userName" id="nickname" required="required"/>
 								</td>
 							</tr>
 							<tr>
 								<td>手机号</td>
 								<td>
-									<input id="userPhone" required="required">
+									<input id="mobile" required="required">
 								</td>
 							</tr>
 							<tr>
 								<td>QQ号</td>
 								<td>
-									<input id="userQQ">
+									<input id="qq">
 								</td>
 							</tr>
 							<tr>
 								<td>邮箱</td>
 								<td>
-									<input id="userEmail" type="email">
+									<input id="mail" type="email">
 								</td>
 							</tr>
 							<tr>
@@ -73,7 +73,7 @@
 								<td><input id="major" required="required"></td>
 							</tr>
 							<tr>
-								<td><button>保存</button></td>
+								<td><button id="save">保存</button></td>
 							</tr>
 						</table>
 					</div>
