--- a/recourse/common/frame.html
+++ b/recourse/common/frame.html
@@ -5,13 +5,9 @@
 		<meta charset="UTF-8">
 		<title></title>
 	</head>
-	<frameset rows="100px,*"border="0">
+	<frameset rows="102px,*"border="0">
 		<frame src="head.html" id="top" name="topframe" frameborder="0" />
-		<frameset cols="100px,*"border="0">
-			<frame src="manu.html" name="leftframe" frameborder="0"noresize="noresize"/>
-			<frame src="../../index.html" name="mainframe" id="contentframe" frameborder="0"noresize="noresize"/>
-		</frameset>
-		
+		<frame src="../../index.html" name="mainframe" frameborder="0"noresize="noresize"/>
 	</frameset>
 
 </html>
