--- a/recourse/common/head.html
+++ b/recourse/common/head.html
@@ -17,12 +17,12 @@
 	<body>
 		<div class="top">
 			<div class="topleft">
-				<img class="banner" src="../../img/title.png" />
+				<img class="banner" src="../../img/webname.png" />
 			</div>
 			<div class="top_menu">
 				<ul>
 					<li><a onclick="onclick1(this);" href="../../index.html" target="mainframe" class="index-text">首页</a></li>
-					<li><a onclick="onclick1(this);" href="#" class="newNav">最新发布</a></li>
+					<li><a id="latestbtn" onclick="onclick1(this);" href="#" target="mainframe" class="newNav">最新发布</a></li>
 					<li>
 						<p>|</p>
 					</li>
@@ -31,13 +31,14 @@
 				</ul>
 			</div>
 			<div class="loginEnroll">
-				<a href="../../login.html"target="_blank">登录</a><a>/</a><a href="../../enroll.html"target="_blank">注册</a>
+				<a href="../../login.html"target="_blank" class="logbtn">登录</a><a class="logbtn">/</a><a href="../../enroll.html"target="_blank" class="logbtn">注册</a>
+				<a href="frame.html"target="_blank" id="logoutbtn">退出登录</a>
 			</div>
 			<!--搜素框-->
 			<div class="topsearch">
-				<label class="searchicon" >
-					<a id="searchbtn" onclick="onclick1(this);" href="../../index.html" target="mainframe" class="index-text">
-						<img src="../../img/searchicon.png" />
+				<label class="searchicon">
+					<a id="searchbtn" onclick="onclick1(this);" href="#" target="mainframe" class="index-text">
+						<img src="../../img/serch.jpg" />
 					</a>
 				</label>
 				<input type="text" id="search" class="search" />
